API Request Change